--- a/force-app/main/default/classes/ABHI_DeviceDetailsController_Test.cls
+++ b/force-app/main/default/classes/ABHI_DeviceDetailsController_Test.cls
@@ -50,7 +50,7 @@ public class ABHI_DeviceDetailsController_Test {
         Test.setMock(HttpCalloutMock.class, new ABHI_DeviceDetailsMockHttpResponse());
         System.runAs(testUser){
             Test.startTest();
-            ABHI_DeviceDetailsController.ResponseWrapper res= ABHI_DeviceDetailsController.getDeviceDetails(acc.Id, mockRequest);
+            ABHI_DeviceDetailsController.ResponseWrapper res= ABHI_DeviceDetailsController.getDeviceDetails(acc.Id);
             Test.stopTest();
             System.assertEquals(1000, res.StatusCode, 'code');
             System.assertEquals('Success', res.Message, 'Message');
@@ -66,7 +66,7 @@ public class ABHI_DeviceDetailsController_Test {
         Test.setMock(HttpCalloutMock.class, new ABHI_DeviceDetailsFailureResponseGenerator());
         System.runAs(testUser){
             Test.startTest();
-            ABHI_DeviceDetailsController.ResponseWrapper res= ABHI_DeviceDetailsController.getDeviceDetails(acc.Id, mockRequest);
+            ABHI_DeviceDetailsController.ResponseWrapper res= ABHI_DeviceDetailsController.getDeviceDetails(acc.Id);
             Test.stopTest();
             System.assertEquals(1001, res.StatusCode, 'code');
         }
@@ -103,7 +103,7 @@ public class ABHI_DeviceDetailsController_Test {
         public HTTPResponse respond(HTTPRequest req) {
             HttpResponse res = new HttpResponse();
             res.setHeader('Content-Type', 'application/json');
-			String s = '{\"Content\":\"AFfSJT4iV7UwdIQNseRlld21/nfM5HBD7kBnemXTIql8LCdgZzwwnNgxdYxVgXtn8bq4bQvZZVN9ZxGZxvLw4A==\",\"StatusCode\":\"1001\",\"Message\":\"DeviceDetailsFailure\"}';
+      String s = '{\"Content\":\"AFfSJT4iV7UwdIQNseRlld21/nfM5HBD7kBnemXTIql8LCdgZzwwnNgxdYxVgXtn8bq4bQvZZVN9ZxGZxvLw4A==\",\"StatusCode\":\"1001\",\"Message\":\"DeviceDetailsFailure\"}';
             res.setBody(s);
             res.setStatusCode(400);
             return res;
