--- a/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
+++ b/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
@@ -236,7 +236,7 @@ public without sharing class ABSLI_CreateCaseValidationsController {
             if(policy!=null && policy.Issue_Date__c!=null){
                 Date issueDate = Date.newInstance(policy.Issue_Date__c.year(), policy.Issue_Date__c.month(), policy.Issue_Date__c.day());
                 Date oneYearAfterIssueDate = issueDate.addYears(1);
-                if(Date.Today() >= oneYearAfterIssueDate){
+                if(Date.Today() <= oneYearAfterIssueDate){
                     return 'Success';
                 }else{
                     return 'Policy is not eligible.';
