--- a/force-app/main/default/classes/ASF_CaseTriggerModularHelper.cls
+++ b/force-app/main/default/classes/ASF_CaseTriggerModularHelper.cls
@@ -192,7 +192,6 @@ blankSourcePresent = true;
                 caseRec.ASF_Is_Cloneable__c = appliedCCC.ASF_Is_Cloneable__c;
                 caseRec.Reopen_Days__c = appliedCCC.Reopen_Days__c;
                 caseRec.Reopen_Style__c = appliedCCC.Reopen_Style__c;
-                caseRec.Activity__c = appliedCCC.Activity__c;
                 // BYPASS THE LOGIC TO STAMP STP FLAG FROM CCC FOR ABSLI BU.
                 if(!caseRec.Is_STP__c && caseRec.Technical_Source__c == 'API' && caseRec.Business_Unit__c != ASF_Constants.ABSLI_BU){
                     caseRec.Is_STP__c = appliedCCC.Is_STP__c;   
@@ -459,7 +458,7 @@ blankSourcePresent = true;
         if(allStageConfigs != null && !eligibleRecords.isEmpty()){
             
             // Find All Query Fields for Case, Merge them togther, and perform one Query on Case
-            Set<String> allFields = new Set<String>{'stage__c', 'businesshoursid', 'ccc_external_id__c', 'previous_stage__c', 'business_unit__c', 'lead__c','lob__c'};
+            Set<String> allFields = new Set<String>{'stage__c', 'businesshoursid', 'ccc_external_id__c', 'previous_stage__c', 'business_unit__c', 'lead__c'};
                 for(ASF_Case_Stage_Config__c config: allStageConfigs){
                     if(config.Query_Fields__c != null){
                         allFields.addAll(config.Query_Fields__c.toLowerCase().split(','));
